get user service done

--- a/src/components/Order/Order.css
+++ b/src/components/Order/Order.css
@@ -1,4 +1,4 @@
-#upload-btn{
+/* #upload-btn{
     width: 271px;
     height: 60px;
     background: #DEFFED;
@@ -11,4 +11,4 @@
 #upload-btn p{
     padding-top: 18px;
     padding-left: 48px;
-}
+} */
