--- a/src/components/Home/NavbarMain/NavbarMain.css
+++ b/src/components/Home/NavbarMain/NavbarMain.css
@@ -4,3 +4,29 @@
     left: 137px;
     top: 28px;
 }
+
+.nav-link {
+    width: 134px;
+    height: 45px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 9px;
+    /* or 64% */
+
+    letter-spacing: 0.396px;
+
+    color: #474747;
+        line-height: 42px;
+
+}
+#login-btn{
+    width: 134px;
+    height: 45px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+}
