feedback card text style chagned

--- a/src/components/Home/Feedback/Feedback.css
+++ b/src/components/Home/Feedback/Feedback.css
@@ -29,3 +29,21 @@
     border:none;
     height: 60px;
 }
+
+#feedback-name{
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+    color: #000000;
+}
+#feedback-from{
+    height: 24px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #000000;
+}
