--- a/src/components/MakeAdmin/MakeAdmin.css
+++ b/src/components/MakeAdmin/MakeAdmin.css
@@ -34,3 +34,13 @@ margin-left: -300px;
 #make-admin-div{
     background: #F4F7FC;
 }
+
+#make-admin-form label{
+    height: 24px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #232323;
+}
