--- a/src/components/Home/NavbarMain/NavbarMain.css
+++ b/src/components/Home/NavbarMain/NavbarMain.css
@@ -30,3 +30,16 @@
     font-size: 16px;
     line-height: 24px;
 }
+
+#dash-btn {
+    width: 134px;
+    height: 45px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 5px;
+    margin-top: -12px;
+}
+
